  ant-bootstrap.jar is included in the etc directory of the binary
  distribution, copy this to the lib directory and use
  "java -jar ant-bootstrap.jar" instead if you want to run Ant without
  the wrapper script (not recommended).

* The <script> task now requires Apache BSF instead of the older IBM
  version.  See <http://jakarta.apache.org/bsf/>

* <xmlproperty> will no longer fail if the file to be loaded doesn't exist.

Fixed bugs:
-----------
* <translate> was not ignoring comment lines.

* Expand tasks did not behave as expected with PatternSets.

* <property environment=... /> now works on OS/400.

* <manifest> wouldn't update an existing manifest if only an attribute
  of an existing section changed.

* ant.bat now supports the ANT_ARGS and JAVACMD environment variables
  again (like Ant 1.5 did).

* The "plain" <junit> <formatter> could throw a NullPointerException
  if an error occured in setUp.

* <cab> could hang listcab on large <fileset>s.

* <junit> will now produce output when a test times out as well.

* The starteam stcheckout, stcheckin tasks now correctly compute status of files
  against whatever local tree they are run against and, optionally, will not
  process a file if it is current.  Previously you had to process everything
  unless you ran against the default folder which wasn't the normal use-case for
  ant-starteam.  The stlist task now similarly displays that status correctly
  making it a more generally useful tool.

* <replace> would count some internal character replacements when
  reporting the number of replaced tokens.

* <concat> would cause an exception if a <filelist> pointed to files
  that do not exist.

* <javadoc> will now pass -source to custom doclets as well.

* <cvstagdiff> would throw a NullPointException if there had been no
  differences.

* <cvschangelog> could miss today's changes.

* entity includes would cause exceptions if path names included spaces.
